bynkc/tests/fixtures/negative/124_provider_given_unknown/src/demo.bynk
context demo

capability Greeter { fn greet() -> Effect[()] }

provides Greeter = PoliteGreeter given Nonexistent {
  fn greet() -> Effect[()] {
    Effect.pure(())
  }
}
